Improved Gemini prompt and successfully parsed site opening hours

--- a/Final_Project.ipynb
+++ b/Final_Project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNnbtJY7SPvB+k+dUrJIqij"
+      "authorship_tag": "ABX9TyNiEBiG6PkKCEoKgzhxxjXF"
     },
     "kernelspec": {
       "name": "python3",
@@ -15,15 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Amanda's notes: Need to increase limit for pulling 311 data when pulling total complaints!"
-      ],
-      "metadata": {
-        "id": "TtIHDMT6-tLV"
-      }
-    },
     {
       "cell_type": "code",
       "source": [
@@ -44,9 +35,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "db8220b5-2e03-4696-92ad-90aafeddf679"
+        "outputId": "97ebf83c-240f-45f0-9954-9fab8444b690"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -1113,9 +1104,9 @@
           "height": 335
         },
         "id": "O7iAMF-ujGYz",
-        "outputId": "bea8ec76-ddb2-4fbe-b0e2-d40538fd873c"
+        "outputId": "7e99b774-d36b-4c29-e395-6da574ca13c1"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1149,7 +1140,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-8c8645d3-b1e0-48d0-aeb4-2e4360fdc558\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-f4f28eab-ac56-4583-bde0-24e44e476e55\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1247,7 +1238,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8c8645d3-b1e0-48d0-aeb4-2e4360fdc558')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f4f28eab-ac56-4583-bde0-24e44e476e55')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1299,12 +1290,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-8c8645d3-b1e0-48d0-aeb4-2e4360fdc558 button.colab-df-convert');\n",
+              "        document.querySelector('#df-f4f28eab-ac56-4583-bde0-24e44e476e55 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-8c8645d3-b1e0-48d0-aeb4-2e4360fdc558');\n",
+              "        const element = document.querySelector('#df-f4f28eab-ac56-4583-bde0-24e44e476e55');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1324,8 +1315,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-506cb96d-3564-4d7f-8d73-ec497a6eff1c\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-506cb96d-3564-4d7f-8d73-ec497a6eff1c')\"\n",
+              "<div id=\"df-f4b10536-edaa-4e58-a5dc-bf1285a1130d\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f4b10536-edaa-4e58-a5dc-bf1285a1130d')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1444,7 +1435,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-506cb96d-3564-4d7f-8d73-ec497a6eff1c button');\n",
+              "        document.querySelector('#df-f4b10536-edaa-4e58-a5dc-bf1285a1130d button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1460,7 +1451,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 2
         }
       ]
     },
@@ -2596,6 +2587,9 @@
     {
       "cell_type": "code",
       "source": [
+        "from google.colab import userdata\n",
+        "GOOGLE_API_KEY = userdata.get('google_api_key')\n",
+        "\n",
         "from google import genai\n",
         "from google.genai import types\n",
         "from IPython.display import HTML, Markdown, display"
@@ -2603,7 +2597,7 @@
       "metadata": {
         "id": "JaPOJ-Qfe4wo"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -2611,38 +2605,17 @@
       "source": [
         "from google.api_core import retry\n",
         "\n",
-        "\n",
         "is_retriable = lambda e: (isinstance(e, genai.errors.APIError) and e.code in {429, 503})\n",
         "\n",
         "genai.models.Models.generate_content = retry.Retry(\n",
-        "    predicate=is_retriable)(genai.models.Models.generate_content)"
+        "    predicate=is_retriable)(genai.models.Models.generate_content)\n",
+        "\n",
+        "client = genai.Client(api_key=GOOGLE_API_KEY)"
       ],
       "metadata": {
         "id": "rzND9s33gp-g"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "GOOGLE_API_KEY = ''"
-      ],
-      "metadata": {
-        "id": "mRRL91F8gscC"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "client = genai.Client(api_key=GOOGLE_API_KEY)"
-      ],
-      "metadata": {
-        "id": "8rBlApYKgxfH"
-      },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -2656,9 +2629,9 @@
           "height": 458
         },
         "id": "qfezLDmlher5",
-        "outputId": "931e8759-14d0-483a-8a2a-58c8aa67992e"
+        "outputId": "e8a74ae1-68b9-419a-c696-783f7cceeea9"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2751,43 +2724,45 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 6
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "1nSdKBQS2-U5"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
-        "response = client.models.generate_content(\n",
-        "    model=\"gemini-2.0-flash-lite\",\n",
-        "      contents = f\"If a site has opening hours of {dropoff_sites.loc[341, 'days_hours']}, how many hours per month is it open? Assume there are 30 days in a month. Reply with only a number, or if one is not clear, just respond \\'\\'.\")\n",
+        "from pydantic import BaseModel\n",
         "\n",
-        "print(response.text)"
+        "class Response(BaseModel):\n",
+        "  logical: str\n",
+        "  hours_per_month: int\n",
+        "\n",
+        "response = client.models.generate_content(\n",
+        "    model='gemini-2.0-flash',\n",
+        "    contents=f'''The site hours are {dropoff_sites.loc[i, 'days_hours']}. Does this make logical sense, Yes or No?\n",
+        "    How many hours in a 28-day month is the site open?''',\n",
+        "    config={\n",
+        "        'response_mime_type': 'application/json',\n",
+        "        'response_schema': list[Response],\n",
+        "    },\n",
+        ")\n",
+        "# Use the response as a JSON string.\n",
+        "print(response.parsed[0].logical, response.parsed[0].hours_per_month)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "LUv6_KgLhUC_",
-        "outputId": "6bf02173-e2c1-42eb-fa68-be639c30f774"
+        "id": "TdpgpJEn_tlo",
+        "outputId": "fa4c7cb7-e017-4754-ce1a-e4d65f3b0ddc"
       },
-      "execution_count": null,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "27\n",
-            "\n"
+            "No 0\n"
           ]
         }
       ]
@@ -2795,35 +2770,103 @@
     {
       "cell_type": "code",
       "source": [
+        "# Test Gemini with first 10 rows in dropoff_sites dataframe\n",
+        "from pydantic import BaseModel\n",
+        "\n",
+        "class Response(BaseModel):\n",
+        "  logical: str\n",
+        "  hours_per_month: int\n",
+        "\n",
+        "for i in range(10):\n",
+        "  response = client.models.generate_content(\n",
+        "      model='gemini-2.0-flash',\n",
+        "      contents=f'''The site hours are {dropoff_sites.loc[i, 'days_hours']}. Does this make logical sense, Yes or No?\n",
+        "      How many hours in a 28-day month is the site open?''',\n",
+        "      config={\n",
+        "          'response_mime_type': 'application/json',\n",
+        "          'response_schema': list[Response],\n",
+        "      },\n",
+        "  )\n",
+        "  # Use the response as a JSON string.\n",
+        "  print(response.parsed[0].logical, response.parsed[0].hours_per_month)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1DsfPwRkCMHN",
+        "outputId": "77f5f996-ea9f-45de-8759-1543c918c29f"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Yes 672\n",
+            "Yes 112\n",
+            "Yes 224\n",
+            "Yes 672\n",
+            "Yes 4\n",
+            "No 0\n",
+            "No 0\n",
+            "Yes 196\n",
+            "Yes 168\n",
+            "No 0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Calculate the opening hours per month for each site\n",
+        "from pydantic import BaseModel\n",
+        "\n",
+        "class Response(BaseModel):\n",
+        "  logical: str\n",
+        "  hours_per_month: int\n",
+        "\n",
         "for i in range(len(dropoff_sites)):\n",
         "  response = client.models.generate_content(\n",
-        "      model = 'gemini-2.0-flash-lite',\n",
-        "      contents = f\"If a site has opening hours of {dropoff_sites.loc[i, 'days_hours']}, how many hours per month is it open? Assume there are 30 days in a month. Reply with only a number, or if one is not clear, just respond \\'\\'.\")\n",
-        "  dropoff_sites.loc[i, 'hours_per_month'] = response.text\n",
+        "      model='gemini-2.0-flash',\n",
+        "      contents=f'''The site hours are {dropoff_sites.loc[i, 'days_hours']}. Does this make logical sense, Yes or No?\n",
+        "      How many hours in a 28-day month is the site open?''',\n",
+        "      config={\n",
+        "          'response_mime_type': 'application/json',\n",
+        "          'response_schema': list[Response],\n",
+        "      },\n",
+        "  )\n",
+        "  # Save the calculated hours\n",
+        "  if response.parsed[0].logical == 'Yes':\n",
+        "    dropoff_sites.loc[i, 'hours_per_month'] = response.parsed[0].hours_per_month\n",
+        "  else:\n",
+        "    dropoff_sites.loc[i, 'hours_per_month'] = np.nan\n",
+        "\n",
+        "  # Track progress\n",
         "  if i % 50 == 0:\n",
-        "    print(i)"
+        "    print(f'Progress: {i} rows')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "collapsed": true,
-        "id": "FrEhfE5ug7z3",
-        "outputId": "ce23d4f9-1632-40f7-ddea-023f0bb468a7"
+        "id": "oL-C0SxQDp5M",
+        "outputId": "d30a6188-0417-446f-e8df-aaba036fcfc0"
       },
-      "execution_count": null,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0\n",
-            "50\n",
-            "100\n",
-            "150\n",
-            "200\n",
-            "250\n",
-            "300\n"
+            "Progress: 0 rows\n",
+            "Progress: 50 rows\n",
+            "Progress: 100 rows\n",
+            "Progress: 150 rows\n",
+            "Progress: 200 rows\n",
+            "Progress: 250 rows\n",
+            "Progress: 300 rows\n"
           ]
         }
       ]
@@ -2831,67 +2874,33 @@
     {
       "cell_type": "code",
       "source": [
-        "dropoff_sites.hours_per_month = dropoff_sites.hours_per_month.str.replace('hours', '')"
-      ],
-      "metadata": {
-        "id": "e7L1sWqUg4Cw"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "dropoff_sites.hours_per_month = dropoff_sites.hours_per_month.str.replace('\\n', '')"
-      ],
-      "metadata": {
-        "id": "ALLtJg0qvEmZ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "dropoff_sites.hours_per_month = dropoff_sites.hours_per_month.str.strip()"
-      ],
-      "metadata": {
-        "id": "l9SAMkgjvQ1n"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "dropoff_sites.hours_per_month"
+        "dropoff_sites['hours_per_month'][0:10]"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 458
+          "height": 397
         },
-        "id": "TmH1Wf9QvVjb",
-        "outputId": "fb622e5a-dd02-4faf-8126-e4f005a9ff6f"
+        "id": "xYdngt-yJSyS",
+        "outputId": "f679af4a-b022-4406-b994-60391b7c3132"
       },
-      "execution_count": null,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0      4\n",
-              "1      4\n",
-              "2      4\n",
-              "3      4\n",
+              "0    672\n",
+              "1    112\n",
+              "2    224\n",
+              "3    672\n",
               "4      4\n",
-              "      ..\n",
-              "341    4\n",
-              "342    4\n",
-              "343    4\n",
-              "344    4\n",
-              "345    4\n",
-              "Name: hours_per_month, Length: 346, dtype: object"
+              "5    NaN\n",
+              "6    NaN\n",
+              "7    196\n",
+              "8    168\n",
+              "9    NaN\n",
+              "Name: hours_per_month, dtype: object"
             ],
             "text/html": [
               "<div>\n",
@@ -2918,56 +2927,51 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>4</td>\n",
+              "      <td>672</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>4</td>\n",
+              "      <td>112</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>4</td>\n",
+              "      <td>224</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>4</td>\n",
+              "      <td>672</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>4</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
+              "      <th>5</th>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>341</th>\n",
-              "      <td>4</td>\n",
+              "      <th>6</th>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>342</th>\n",
-              "      <td>4</td>\n",
+              "      <th>7</th>\n",
+              "      <td>196</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>343</th>\n",
-              "      <td>4</td>\n",
+              "      <th>8</th>\n",
+              "      <td>168</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>344</th>\n",
-              "      <td>4</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>345</th>\n",
-              "      <td>4</td>\n",
+              "      <th>9</th>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>346 rows × 1 columns</p>\n",
               "</div><br><label><b>dtype:</b> object</label>"
             ]
           },
           "metadata": {},
-          "execution_count": 49
+          "execution_count": 54
         }
       ]
     },
@@ -2995,7 +2999,7 @@
         "id": "gzWVfsm09jEu",
         "outputId": "7f99497a-05e7-4542-c08e-67a46a232bf4"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3289,7 +3293,7 @@
       "metadata": {
         "id": "8Or5ErAo-kn4"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3307,7 +3311,7 @@
         "id": "zAb9Wj6k1Rgi",
         "outputId": "cf225f6d-393a-4ed1-caf9-00fc76653172"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3526,7 +3530,7 @@
       "metadata": {
         "id": "DR95EaqnDlgE"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3538,7 +3542,7 @@
       "metadata": {
         "id": "i_4Rmc8xDpgS"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3554,7 +3558,7 @@
       "metadata": {
         "id": "zQDdGL74E70r"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3570,7 +3574,7 @@
         "id": "5zdRZ4g1EazU",
         "outputId": "47d95057-54a1-4a6d-8e23-b6ab775bec19"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3890,7 +3894,7 @@
         "id": "BGyTEWhTFkbc",
         "outputId": "b82b1031-1b27-45a3-c399-bc5798a9b51e"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3923,7 +3927,7 @@
         "id": "RWtg0nh4Fodk",
         "outputId": "e96f3ee2-e025-40a1-e422-1be1f75435f7"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
